envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: spire-federation
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: spire-federation
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: spire-federation
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: spire
                port_value: 8443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        # If you want to do verification on spire server's cert
        #sni: set-your-domain.com
        #common_tls_context: 
        #  validation_context:
        #    match_subject_alt_names:
        #      - exact: "spiffe://example.org/spire/server"
